Fixing problems with jumping header after affixing.

--- a/css/main.css
+++ b/css/main.css
@@ -5,45 +5,64 @@ body {
     position: relative;
 }
 
-.page-header {
+.header {
     border-bottom: none;
     padding-bottom: 0;
+    margin: 40px 0px 20px;
     margin-bottom: 10px;
     background: white;
     z-index: 1000;
 }
 
-.page-header.affix {
+.header.affix {
+    position: fixed;
     left: 0;
-    padding-left: 8%;
-    padding-right: 8%;
+    width: 100%;
     margin: 0;
     padding-top: 20px;
     padding-bottom: 10px;
-    position: fixed;
-    right: 0;    
 }
 
-.page-header.affix + .affix-spacer {
+.header.affix .affix-container {
+    margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .header.affix .affix-container {
+    width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .header.affix .affix-container {
+    width: 940px;
+  }
+}
+@media (min-width: 1200px) {
+  .header.affix .affix-container {
+    width: 1140px;
+  }
+}
+
+.header.affix + .affix-spacer {
     width: 100%;
     height: 120px;
 }
 
-.page-header h1 {
+.header h1 {
     float: left;
     width: 12em;
     padding-bottom: 0.5em;
 }
 
-.page-header h1 sub {
+.header h1 sub {
     font-size: 0.8em; 
 }
 
-.page-header h1 small a {
+.header h1 small a {
     color: #999;
 }
 
-.page-header h1 small a:hover {
+.header h1 small a:hover {
     color: #666;
 }
 
